[gd_scene load_steps=10 format=2]

[ext_resource path="res://Interface/Icons/foldin.png" type="Texture" id=1]
[ext_resource path="res://Interface/Icons/foldout.png" type="Texture" id=2]
[ext_resource path="res://Interface/Themes/statistics_theme.tres" type="Theme" id=3]
[ext_resource path="res://Interface/Icons/help-circled.png" type="Texture" id=4]
[ext_resource path="res://Interface/Scripts/DieTypeStatistic.gd" type="Script" id=5]
[ext_resource path="res://Interface/Fonts/smaller_mono.tres" type="DynamicFont" id=6]
[ext_resource path="res://Interface/Scripts/IconButton.gd" type="Script" id=7]
[ext_resource path="res://Interface/Themes/default_theme.tres" type="Theme" id=8]
[ext_resource path="res://Interface/Themes/panel_hseparator.stylebox" type="StyleBox" id=9]

[node name="DieTypeStatistic" type="PanelContainer"]
margin_right = 211.0
margin_bottom = 83.0
theme = ExtResource( 8 )
custom_styles/panel = ExtResource( 9 )
script = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 201.0
margin_bottom = 81.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Genral" type="MarginContainer" parent="VBox"]
margin_right = 201.0
margin_bottom = 69.0
mouse_filter = 2
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="Grid" type="GridContainer" parent="VBox/Genral"]
margin_top = 5.0
margin_right = 201.0
margin_bottom = 64.0
grow_horizontal = 0
mouse_filter = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="VBox/Genral/Grid"]
margin_right = 98.0
margin_bottom = 25.0
hint_tooltip = "Number of dice rolled of this type"
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="Total" type="Label" parent="VBox/Genral/Grid/Margin"]
modulate = Color( 1, 0.768627, 0.564706, 1 )
margin_top = 4.0
margin_right = 98.0
margin_bottom = 21.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
text = "0 x"
align = 2
valign = 1

[node name="TypeContainer" type="AspectRatioContainer" parent="VBox/Genral/Grid"]
modulate = Color( 1, 0.768627, 0.564706, 1 )
margin_left = 102.0
margin_right = 200.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
stretch_mode = 1
alignment_horizontal = 2

[node name="TypeIcon" type="TextureRect" parent="VBox/Genral/Grid/TypeContainer"]
margin_left = 73.0
margin_right = 98.0
margin_bottom = 25.0
hint_tooltip = "Dice type"
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Margin2" type="MarginContainer" parent="VBox/Genral/Grid"]
margin_top = 29.0
margin_right = 98.0
margin_bottom = 59.0
hint_tooltip = "Sum of all dice of this type"
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="Sum" type="Label" parent="VBox/Genral/Grid/Margin2"]
modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 4.0
margin_right = 98.0
margin_bottom = 26.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
align = 2
valign = 1

[node name="FoldMargin" type="MarginContainer" parent="VBox/Genral/Grid"]
margin_left = 102.0
margin_top = 29.0
margin_right = 200.0
margin_bottom = 59.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="FoldContainer" type="AspectRatioContainer" parent="VBox/Genral/Grid/FoldMargin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 96.0
margin_bottom = 25.0
mouse_filter = 2
stretch_mode = 1
alignment_horizontal = 2

[node name="FoldButton" type="TextureButton" parent="VBox/Genral/Grid/FoldMargin/FoldContainer"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_left = 71.0
margin_right = 91.0
margin_bottom = 20.0
hint_tooltip = "Reveal more info"
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
icon_color_normal = Color( 1, 0.92549, 0.839216, 1 )
icon_color_disabled = Color( 0.329412, 0.305882, 0.407843, 1 )
icon_color_focus = Color( 1, 0.768627, 0.564706, 1 )
icon_color_hover = Color( 1, 0.768627, 0.564706, 1 )
icon_color_pressed = Color( 1, 0.92549, 0.839216, 1 )

[node name="Sides" type="MarginContainer" parent="VBox"]
visible = false
margin_top = 99.0
margin_right = 211.0
margin_bottom = 99.0
mouse_filter = 2

[node name="Grid" type="GridContainer" parent="VBox/Sides"]
margin_right = 211.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
__meta__ = {
"_editor_description_": "A grid with two colums is better than nested v/h-boxes. A wider label will expand the whole column and not just one row, leading to better alignment."
}

[connection signal="toggled" from="VBox/Genral/Grid/FoldMargin/FoldContainer/FoldButton" to="." method="_on_FoldButton_toggled"]
